# sottek-hearing-model

./: .gitignore  .gitmessage  README.md  pylock.toml  pyproject.toml
.github/workflows/: python-publish.yml
src/sottek_hearing_model/: __init__.py  fftw.py  filters.py  plotting_tools.py  shmLoudnessECMA.py  shmReferenceSignals.py  shmRoughnessECMA.py  shmSubs.py  shmTonalityECMA.py  shm_loudness_ecma.py  shm_reference_signals.py  shm_roughness_ecma.py  shm_subs.py  shm_tonality_ecma.py  utils.py
tests/: p.npy  profilerOut.prof  shmTestReferenceSignals.py  test_shmLoudness.py  test_shmRoughness.py  test_shmTonality.py  test_shm_loudness.py  test_shm_roughness.py  test_shm_tonality.py
