[project]
name = "sottek-hearing-model"
version = "0.1.0"
description = "Implements algorithsm from the Sottek Hearing Model"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "Mike Lotinga", email = "m.j.lotinga@edu.salford.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "bottleneck>=1.6.0",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
